# mindforge

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  _fix_test.py  backfill.py  compose.yml  env.example  markdown_summarizer.py  mindforge.py  production-readiness-report.md  pyproject.toml  quiz_agent.py  requirements.txt
.github/: copilot-instructions.md
.github/agents/: bug-fix.agent.md  code-review.agent.md  git-commit.agent.md  test-writer.agent.md
.github/docs/: architecture-fix-plan.md  architecture.md  implementation-plan.md
.github/prompts/: architecture-drift.prompt.md  dependency-audit.prompt.md  fix-bug.prompt.md  implement-next-phase.prompt.md  mindforge-modernization.md  performance-audit.prompt.md  review-last-phase.prompt.md  security-audit.prompt.md
.maister/docs/: INDEX.md
api/: auth.py  deps.py  main.py  quiz_session_store.py  schemas.py  sr_engine.py
api/routers/: admin.py  concepts.py  flashcards.py  lessons.py  quiz.py  search.py
discord_bot/: __init__.py  bot.py  bot_auth.py
discord_bot/cogs/: __init__.py  notifications.py  quiz.py  search.py  upload.py
docker/envfiles/: langfuse.env
docker/minio/: init-buckets.sh
frontend/: .postcssrc.json  angular.json  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: api-smoke.spec.ts  auth.spec.ts  flashcards.spec.ts  knowledge-bases.spec.ts
frontend/src/: index.html  styles.css  styles.scss
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial_schema.py  002_add_prompt_locale.py  003_add_user_is_admin.py
mindforge/: __init__.py
mindforge/agents/: __init__.py  (+9 more)
processor/: evals.py  llm_client.py  metrics.py  models.py  pipeline.py  renderers.py  settings.py  state.py  tracing.py  validation.py  watcher.py
scripts/: STARTUP_GUIDE.md  export_openapi.py  start-api.bat  start-api.sh  start-dev.bat  start-dev.sh  start-discord.bat  start-discord.sh  start-full-stack.bat  start-full-stack.sh  start-quiz.bat  start-quiz.sh  start-services.bat  start-services.sh  stop.bat  stop.sh
tests/: conftest.py  test_auth.py  test_bot_auth.py  test_egress_policy.py  test_interaction_ownership.py  test_pipeline_idempotency.py  test_quiz_cost.py  test_quiz_session.py  test_upload_sanitize.py
(+347 files in other folders)
